# speech-enhancement-arena

./: .gitignore  BENCHMARK_RESULTS.md  IMPLEMENTATION_STATUS.md  README.md  TRAINIUM_NOTES.md  TRAINIUM_QUICKSTART.md  arena.py  economics.py  iTerm2  pyproject.toml  requirements.txt  serve.py  train.py
docs/: ACADEMIC_HARDWARE_GUIDE.md  AWS_GETTING_STARTED.md  COMPILATION_FAQ.md  CORE_PRINCIPLES.md  GPU_SELECTION_GUIDE.md  HARDWARE_SELECTION.md  HYBRID_CLOUD_WORKFLOW.md  RESEARCH_VS_PRODUCTION_MODELS.md  SPECS_VS_REALITY.md  SPOT_RESILIENCE.md  TRAINIUM_PRACTICAL_NOTES.md  WHEN_TO_USE_PREMIUM_HARDWARE.md
models/: __init__.py  architectures.py
results/g7e/: arena_attention.jsonl  arena_conv_mask.jsonl  arena_crm.jsonl  arena_gru.jsonl  arena_summary.json
results/orion/: arena_attention.jsonl  arena_conv_mask.jsonl  arena_crm.jsonl  arena_gru.jsonl  arena_summary.json
results/trn1/: arena_attention.jsonl  arena_conv_mask.jsonl  arena_crm.jsonl  arena_summary_cached.json  arena_summary_cached_3models.json  arena_summary_firstrun.json  gru_test.jsonl
results/trn1-trnfft/: smoke.out  smoke4.jsonl  smoke4.out
scripts/: trace_for_neuron.py
static/: index.html
stream/client/: capture.js  index.html
stream/server/: echo.py  inference.py
utils/: __init__.py  data.py
