[project]
name = "speech-enhancement-arena"
version = "0.1.0"
description = "4 speech enhancement models race on MIG/Trainium — workshop demo"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "numpy",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "matplotlib",
]
